public/index.css
.posts {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 1rem;
    width: 80ch;
    margin-top: 1rem;
    margin-bottom: 1rem;
}

.post-item {
    display: flex;
    flex-direction: column;
    border-radius: 0.25rem;
    padding: 0.5rem;
    padding-left: none;
    text-decoration: none;
    border: 3px solid #aaa;
}

.view-count {
    margin-top: auto;
}

.updated-time,
.view-count {
    color: #555;
    font-size: 0.8rem;
}

span.counter {
    font-size: 1.2rem;
    font-weight: bold;
}

span.badge {
    font-size: 0.8rem;
    border-radius: 0.2rem;
    padding: 0.15rem;
}

span.danger {
    background-color: rgb(174, 41, 41);
}

.post-author {
    font-style: italic;
    font-size: 0.9rem;
}

